--- a/ACLCA_Workshop_AB-LCA.ipynb
+++ b/ACLCA_Workshop_AB-LCA.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "* CONTINUE HERE: Names of library with version numbers\n",
     "\n",
-    "An easier solution is to install all the libraries at once [using the .yml file](https://conda.io/projects/conda/en/latest/user-guide/tasks/manage-environments.html#creating-an-environment-from-an-environment-yml-file) in the ACLCA_Workshop_AB-LCA repository CONTINUE HERE: ADD LINK TO THE REPOSITORY.\n",
+    "An easier solution is to install all the libraries at once [using the .yml file](https://conda.io/projects/conda/en/latest/user-guide/tasks/manage-environments.html#creating-an-environment-from-an-environment-yml-file) in the [ACLCA_Workshop_AB-LCA repository](https://github.com/jwalzberg/ACLCA_Workshop_AB-LCA).\n",
     "\n",
     "Then you need to activate the environment (or stay on the base if you added the libraries to your base environment) by clicking Kernel and \"change kernel\" in the Jupyter notebook menu (you should see the name of the environment as kernel option). If all the libraries are installed, the cell below should run without any issues."
    ]
