Adding instruction to get started

--- a/ACLCA_Workshop_AB-LCA.ipynb
+++ b/ACLCA_Workshop_AB-LCA.ipynb
@@ -32,16 +32,22 @@
     "\n",
     "First you need to install the following libraries in your base or a new Python or Conda environment (see [Managing conda environment](https://conda.io/projects/conda/en/latest/user-guide/tasks/manage-environments.html)):\n",
     "\n",
-    "* CONTINUE HERE: Names of library with version numbers\n",
+    "* mesa==0.8.9\n",
+    "* networkx==3.1\n",
+    "* numpy==1.25.0\n",
+    "* pandas==1.5.3\n",
+    "* brightway2==2.4.3\n",
+    "* matplotlib==3.7.1\n",
+    "* seaborn==0.12.2\n",
     "\n",
-    "An easier solution is to install all the libraries at once [using the .yml file](https://conda.io/projects/conda/en/latest/user-guide/tasks/manage-environments.html#creating-an-environment-from-an-environment-yml-file) in the [ACLCA_Workshop_AB-LCA repository](https://github.com/jwalzberg/ACLCA_Workshop_AB-LCA).\n",
+    "Make sure you also have numpy, enum and math. An easier solution is to install all the libraries at once [using the AB-LCA.yml file](https://conda.io/projects/conda/en/latest/user-guide/tasks/manage-environments.html#creating-an-environment-from-an-environment-yml-file) in the [ACLCA_Workshop_AB-LCA repository](https://github.com/jwalzberg/ACLCA_Workshop_AB-LCA).\n",
     "\n",
     "Then you need to activate the environment (or stay on the base if you added the libraries to your base environment) by clicking Kernel and \"change kernel\" in the Jupyter notebook menu (you should see the name of the environment as kernel option). If all the libraries are installed, the cell below should run without any issues."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,6 +68,39 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mesa==0.8.9\n",
+      "no specific version\n",
+      "no specific version\n",
+      "networkx==3.1\n",
+      "numpy==1.25.0\n",
+      "pandas==1.5.3\n",
+      "no specific version\n",
+      "brightway2==2.4.3\n",
+      "matplotlib==3.7.1\n",
+      "seaborn==0.12.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from importlib.metadata import version\n",
+    "libraries = ['mesa', 'enum', 'math', 'networkx', 'numpy', 'pandas', 'random', 'brightway2', 'matplotlib', 'seaborn']\n",
+    "\n",
+    "for library in libraries:\n",
+    "    try:\n",
+    "        print(library + '==' + version(library))\n",
+    "    except:\n",
+    "        print('no specific version')"
    ]
   },
   {
