Adding instruction to get started

--- a/ACLCA_Workshop_AB-LCA.ipynb
+++ b/ACLCA_Workshop_AB-LCA.ipynb
@@ -21,7 +21,9 @@
     "\n",
     "You should **download this notebook** and follow along!\n",
     "\n",
-    "CONTINUE HERE: ADD A QR CODE + github link"
+    "![ACLCA AB-LCA Repository](AB-LCA_ACLCA_Repository.png)\n",
+    "\n",
+    "https://github.com/jwalzberg/ACLCA_Workshop_AB-LCA"
    ]
   },
   {
